# advent-of-code

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
day01/: readme.md  solution.py
day02/: readme.md  test_solution.py
day03/: readme.md
day04/: readme.md  solution.py
day05/: readme.md  solution.py  test_solution.py
day06/: solution.py  test_solution.py
day07/: file_parser.py  readme.md  solution.py  test_solution.py
day08/: file_parser.py  solution.py  test_solution.py
day09/: solution.py  test_solution.py
day1/: calorie_counter.py  problem.md  readme.md  test_calorie_counter.py
day10/: solution.py
day11/: file_parser.py  part2.py  solution.py  test_solution.py
day12/: readme.md  solution.py  test_solution.py
day13/: file_parser.py  solution.py  test_solution.py
day14/: solution.py  test_solution.py
day2/: problem.md  readme.md  solution.py  test_solution.py
day3/: readme.md  test_solution.py
day4/: test_solution.py
puzzles/python_template/: file_parser.py  solution.py
puzzles/year_2022/day01/: calorie_counter.py  test_calorie_counter.py
puzzles/year_2022/day03/: solution.py  test_solution.py
puzzles/year_2022/day04/: test_solution.py
puzzles/year_2022/day06/: readme.md
puzzles/year_2022/day08/: readme.md  solution.py
puzzles/year_2022/day10/: readme.md  test_solution.py
puzzles/year_2022/day13/: solution.py  test_solution.py
puzzles/year_2022/day21/: file_parser.py  solution.py
puzzles/year_2023/day01/: solution.py  test_solution.py
template/: solution.py  test_solution.py
(+63 files in other folders)
