[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["mhihasan <hasanuli10@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"
mypy = "^0.991"
pre-commit = "^2.20.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ['venv']

[tool.black]
line-length = 120
