[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["mhihasan <hasanuli10@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "3.12.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.lint.dependencies]
ruff = "^0.1.6"
black = "^23.11.0"
pre-commit = "^3.5.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
target_version = ['py311']

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true
